[gd_scene load_steps=16 format=3 uid="uid://bnvcbqwa881ik"]

[ext_resource type="Script" uid="uid://dblop6myrn2ot" path="res://Script/nymera_story_cutscene.gd" id="1_r368w"]
[ext_resource type="Texture2D" uid="uid://cvfm42lsfslo8" path="res://Nymera story/Nymera Scene 1.jpg" id="2_jt7fl"]
[ext_resource type="Texture2D" uid="uid://cnddygksxpmtt" path="res://Nymera story/Nymera Scene 2.jpg" id="3_a0elx"]
[ext_resource type="Texture2D" uid="uid://dvwwjys0oulyp" path="res://Nymera story/Nymera Scene 3.jpg" id="4_ucqpj"]
[ext_resource type="Texture2D" uid="uid://bucntrh77oq4f" path="res://Nymera story/Nymera Scene 4.JPG" id="5_jefor"]
[ext_resource type="Texture2D" uid="uid://cdrncb835xq6d" path="res://Nymera story/Nymera Scene 5.JPG" id="6_ypn4r"]
[ext_resource type="Texture2D" uid="uid://cbicagshhdkdo" path="res://Nymera story/Nymera Scene 6.JPG" id="7_quvvj"]
[ext_resource type="FontFile" uid="uid://c17gxuusjhucp" path="res://SFX/Seraphine DEMO VERSION.ttf" id="8_a0elx"]
[ext_resource type="AudioStream" uid="uid://bsvxdlf4cbcro" path="res://SFX/door open.ogg" id="9_a0elx"]
[ext_resource type="AudioStream" uid="uid://cvp75pe1mnx2i" path="res://SFX/run.ogg" id="9_jefor"]
[ext_resource type="AudioStream" uid="uid://dt4lt1mxvadj8" path="res://SFX/breathing female.ogg" id="11_ypn4r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6263"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_1h5in"]
resource_name = "1st Scene"
length = 60.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control Center/NymeraScene1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control Center/Black Scene:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control Center/Black Scene:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.5, 1, 9, 9.46667, 9.95833, 12.4667, 12.9333, 13.425, 14.5662, 15.0329, 15.3333, 15.8667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 15.0132),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_a0elx"), ExtResource("11_ypn4r")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 15.0132),
"transitions": PackedFloat32Array(1, 2.21914),
"update": 1,
"values": [true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer:stream_paused")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.3741, 14.9983),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Center Buttom/CharName:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.33333, 11.5839, 12.4778, 13.0667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["Nymera", "Nymera", "?????", "", "Nymera"]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Center Buttom/Phase:text")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.33333, 3.7, 6.38333, 9.9, 11.6, 14),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "Dad! Look—I picked so many mushrooms!", "We’ll have enough food for several meals.", "What should we cook today?", "…Dad?", "############", "!?"]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Center Buttom/Phase:visible_ratio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 1.33333, 2.76667, 3.20803, 3.66667, 6, 6.17667, 6.38333, 7.70667, 7.91667, 8.06667, 9.9, 10.45, 11.0873, 11.6, 12.15, 12.3367, 12.4992, 14, 14.1, 14.4333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 0.0, 1.0, 1.0]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(2.83333, 6.06667, 7.83333, 10.7667, 12.2667, 14.1667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"pause"
}, {
"args": [],
"method": &"pause"
}, {
"args": [],
"method": &"pause"
}, {
"args": [],
"method": &"pause"
}, {
"args": [],
"method": &"pause"
}, {
"args": [],
"method": &"pause"
}]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer/Control Center/NymeraScene2:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 9.46667, 15.0942),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CanvasLayer/Control Center/NymeraScene3:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 12.9667, 15.0957),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("CanvasLayer/Center Buttom:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0.866667, 1.27524, 8.9, 9.0303, 9.7, 10.3, 12.6333, 12.8333, 13.1453, 13.3333, 14.4333, 14.5667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("AudioStreamPlayer:volume_db")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 1.08054, 14.9105, 15, 17.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [5.0, 0.0, 0.0, -10.0, -10.0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("AudioStreamPlayer2:stream")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 15.0195),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [null, ExtResource("9_jefor")]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("AudioStreamPlayer2:playing")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 15.0195),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("CanvasLayer/Control Center/NymeraScene4:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 15.2667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("CanvasLayer/Control Center/NymeraScene4:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(15.1764, 15.2522, 15.3225, 15.4333, 15.5, 15.6, 15.7, 15.8031, 15.8891, 15.9922, 16.0624, 16.1733, 16.2399, 16.3399, 16.4399, 16.543, 16.6291, 16.7107, 16.781, 16.8918, 16.9585, 17.0585, 17.1585, 17.2616, 17.3476, 17.4333, 17.5036, 17.6144, 17.6811, 17.7811, 17.8811, 17.9842, 18.0702, 18.1333, 18.2036, 18.3144, 18.3811, 18.4811, 18.5811, 18.6842, 18.7702, 18.8333, 18.9036, 19.0144, 19.0811, 19.1811, 19.2811, 19.3842, 19.4702, 19.6455, 19.7157, 19.8266, 19.8933, 19.9933, 20.0933, 20.1963, 20.2824, 20.3854, 20.4557, 20.5665, 20.6332, 20.7332, 20.8332, 20.9363, 21.0223, 21.104, 21.1742, 21.2851, 21.3518, 21.4518, 21.5518, 21.6548, 21.7409, 21.8266, 21.8968, 22.0077, 22.0744, 22.1744, 22.2744, 22.3774, 22.4635, 22.5266, 22.5968, 22.7077, 22.7744, 22.8744, 22.9744, 23.0774, 23.1635, 23.2266, 23.2968, 23.4077, 23.4744, 23.5744, 23.6744, 23.7774, 23.8635, 24.0135, 24.0837, 24.1946, 24.2612, 24.3612, 24.4612, 24.5643, 24.6504, 24.7534, 24.8236, 24.9345, 25.0012, 25.1012, 25.2012, 25.3042, 25.3903, 25.472, 25.5422, 25.6531, 25.7197, 25.8197, 25.9197, 26.0228, 26.1089, 26.1946, 26.2648, 26.3757, 26.4423, 26.5423, 26.6423, 26.7454, 26.8315, 26.8946, 26.9648, 27.0757, 27.1423, 27.2423, 27.3423, 27.4454, 27.5315, 27.5946, 27.6648, 27.7757, 27.8423, 27.9423, 28.0423, 28.1454, 28.2315),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0), Vector2(20, 0), Vector2(0, 20), Vector2(20, 20), Vector2(0, 0), Vector2(20, 20), Vector2(20, 0), Vector2(0, 20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3nisc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control Center/NymeraScene1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control Center/NymeraScene3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control Center/NymeraScene4:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control Center/NymeraScene5:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Control Center/NymeraScene6:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Control Center/Black Scene:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Control Center/Black Scene:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AudioStreamPlayer:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("AudioStreamPlayer:stream_paused")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasLayer/Center Buttom/CharName:text")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasLayer/Center Buttom/Phase:text")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CanvasLayer/Center Buttom/Phase:visible_ratio")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CanvasLayer/Control Center/NymeraScene2:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("CanvasLayer/Center Buttom:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("AudioStreamPlayer:volume_db")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-27.566]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("AudioStreamPlayer2:stream")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_jefor")]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("AudioStreamPlayer2:playing")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("CanvasLayer/Control Center/NymeraScene4:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fu1o"]
_data = {
&"1st Scene": SubResource("Animation_1h5in"),
&"RESET": SubResource("Animation_3nisc")
}

[node name="Nymera Story Cutscene" type="Node2D"]
script = ExtResource("1_r368w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control Center" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NymeraScene1" type="Sprite2D" parent="CanvasLayer/Control Center"]
visible = false
scale = Vector2(0.845, 0.845)
texture = ExtResource("2_jt7fl")

[node name="NymeraScene2" type="Sprite2D" parent="CanvasLayer/Control Center"]
scale = Vector2(0.845, 0.845)
texture = ExtResource("3_a0elx")

[node name="NymeraScene3" type="Sprite2D" parent="CanvasLayer/Control Center"]
visible = false
scale = Vector2(0.845, 0.845)
texture = ExtResource("4_ucqpj")

[node name="NymeraScene4" type="Sprite2D" parent="CanvasLayer/Control Center"]
visible = false
position = Vector2(1, 0)
scale = Vector2(0.895559, 0.895559)
texture = ExtResource("5_jefor")

[node name="NymeraScene5" type="Sprite2D" parent="CanvasLayer/Control Center"]
visible = false
scale = Vector2(0.845, 0.845)
texture = ExtResource("6_ypn4r")

[node name="NymeraScene6" type="Sprite2D" parent="CanvasLayer/Control Center"]
visible = false
scale = Vector2(0.845, 0.845)
texture = ExtResource("7_quvvj")

[node name="Black Scene" type="Panel" parent="CanvasLayer/Control Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e6263")

[node name="Center Buttom" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="CanvasLayer/Center Buttom"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -884.0
offset_top = -337.0
offset_right = 632.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharName" type="Label" parent="CanvasLayer/Center Buttom"]
layout_mode = 0
offset_left = -843.0
offset_top = -306.0
offset_right = -669.0
offset_bottom = -226.0
theme_override_fonts/font = ExtResource("8_a0elx")
theme_override_font_sizes/font_size = 60

[node name="NextButton" type="Button" parent="CanvasLayer/Center Buttom"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 647.0
offset_top = -337.0
offset_right = 911.0
offset_bottom = -249.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("8_a0elx")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "Next"
alignment = 0
icon_alignment = 1

[node name="Phase" type="RichTextLabel" parent="CanvasLayer/Center Buttom"]
layout_mode = 0
offset_left = -770.0
offset_top = -208.0
offset_right = 605.0
offset_bottom = -152.0
theme_override_fonts/normal_font = ExtResource("8_a0elx")
theme_override_font_sizes/normal_font_size = 40
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="AutoButton" type="Button" parent="CanvasLayer/Center Buttom"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 647.0
offset_top = -236.0
offset_right = 911.0
offset_bottom = -148.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("8_a0elx")
theme_override_font_sizes/font_size = 50
text = "Auto Play"
icon_alignment = 1

[node name="Top Right" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6fu1o")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_a0elx")
volume_db = -27.566

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jefor")

[connection signal="pressed" from="CanvasLayer/Center Buttom/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Center Buttom/AutoButton" to="." method="_on_auto_button_pressed"]
